<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFirstEdit"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/secondEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintSecondEdit"
            android:importantForAutofill="no"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="@dimen/textSuperBig"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="@dimen/textSuperBig"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textSize="@dimen/textSuperBig"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textSize="@dimen/textSuperBig"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/resultHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/resultHint"
            android:textSize="@dimen/textBig" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noResultsYet"
            android:textColor="@color/black"
            android:textSize="@dimen/textBig" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>